--- a/2ndEdition/omar.pedraza/02 ActivityTest/AndroidManifest.xml
+++ b/2ndEdition/omar.pedraza/02 ActivityTest/AndroidManifest.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.AGi.ActivityTest"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="10"/>
-    <application android:label="@string/app_name">
-        <permission android:name="android.intent.action.CALL"/>
 
-        <activity android:name="Main"
+    <uses-sdk android:targetSdkVersion="10" android:minSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <application android:label="@string/app_name">
+
+        <activity android:name=".Main"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -15,4 +19,4 @@
             </intent-filter>
         </activity>
     </application>
-</manifest> 
+</manifest>
