--- a/2ndEdition/omar.pedraza/02 ActivityTest/AndroidManifest.xml
+++ b/2ndEdition/omar.pedraza/02 ActivityTest/AndroidManifest.xml
@@ -18,5 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".Activity1"
+                  android:label="@string/app_name" />
+        <activity android:name=".Activity2"
+                  android:label="@string/app_name" />
+        <activity android:name=".Activity3"
+                  android:label="@string/app_name" />
     </application>
 </manifest>
