--- a/2ndEdition/antonio.diazarroyo/02 - activities/AndroidManifest.xml
+++ b/2ndEdition/antonio.diazarroyo/02 - activities/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-	<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+
+    <uses-permission android:name="android.permission.CALL_PHONE" >
+    </uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,13 +19,15 @@
         <activity
             android:name="com.activities.MainActivity"
             android:label="@string/app_name" >
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.activities.NewActivity"></activity>
+        <activity android:name="com.activities.Activity02"></activity>
+        <activity android:name="com.activities.Activity03"></activity>
     </application>
 
 </manifest>
