--- a/2ndEdition/jose.fernandez.rosa/4-Mapas/AndroidManifest.xml
+++ b/2ndEdition/jose.fernandez.rosa/4-Mapas/AndroidManifest.xml
@@ -7,12 +7,15 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="10" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps"/>
         <activity
             android:name="curso.android.mapas.Main"
             android:label="@string/app_name" >
