--- a/2ndEdition/jose.fernandez.rosa/pac-man/bin/AndroidManifest.xml
+++ b/2ndEdition/jose.fernandez.rosa/pac-man/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="bartbender.homeunix.pac_man.Pacman"
+            android:name="Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
