--- a/2ndEdition/omar.pedraza/05 AsyncTests/AndroidManifest.xml
+++ b/2ndEdition/omar.pedraza/05 AsyncTests/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.AGi.AsyncTests"
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application android:label="@string/app_name">
         <activity android:name="Main"
                   android:label="@string/app_name">
@@ -14,5 +18,7 @@
         </activity>
         <service android:enabled="true"
                  android:name=".TestService" />
+        <service android:enabled="true"
+                 android:name=".TestLocationService" />
     </application>
 </manifest> 
