Mapa con preferencias

--- a/2ndEdition/laura.nunezgonzalez/Yncat/AndroidManifest.xml
+++ b/2ndEdition/laura.nunezgonzalez/Yncat/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name="MapasActivity"></activity>
         <service android:name="ServicioLocalizacion"></service>
         <activity android:name="PhotoIntentActivity"></activity>
+        <activity android:name="Preferences"></activity>
     </application>
 
 </manifest>
