Añadida funcionalidad de buscar en twitter

--- a/2ndEdition/laura.nunezgonzalez/Yncat/AndroidManifest.xml
+++ b/2ndEdition/laura.nunezgonzalez/Yncat/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <service android:name="ServicioLocalizacion"></service>
         <activity android:name="PhotoIntentActivity"></activity>
         <activity android:name="Preferences"></activity>
+        <activity android:name="Hashtag"></activity>
     </application>
 
 </manifest>
